welcome.lessons.welcome.array.has271.Has271.scala.error
has271:5: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Short)Int
match expected type ?
		if(nums(n) + 5 = nums(n + 1) && nums(n) - 1 == nums(n + 2)){
                           ^has271:4: error: type mismatch;
 found   : Unit
 required: Boolean
	for(n <- 0 to taille - 3){
              ^