welcome.lessons.welcome.array.has271.Has271.scala.code
def has271(nums:Array[Int]): Boolean = {
	var taille: Int = nums.length;
	var n: Int = 0;
	for(n <- 0 to taille - 3){
		if(nums(n) + 5 = nums(n + 1) && nums(n) - 1 == nums(n + 2)){
			return true;  
		}
		else{
			return false;
		}
	}
}
